--- a/app/src/main/res/layout/activity_save_data.xml
+++ b/app/src/main/res/layout/activity_save_data.xml
@@ -13,10 +13,10 @@
         android:layout_margin="25dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="350dp">
         <EditText
             android:id="@+id/txtname"
-            android:hint="Enter Name"
+            android:hint="Enter yourName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <EditText
