--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,42 +7,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#CCE1F3">
 
-<!--    <TextView-->
-<!--        android:id="@+id/tv"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Hello World!"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
     <LinearLayout
-        android:orientation="vertical"
-        android:gravity="center"
-        android:layout_margin="25dp"
-        android:padding="30dp"
-        android:background="@color/teal_200"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="495dp"
+        android:layout_margin="25dp"
+        android:background="@drawable/bg"
+        android:elevation="20dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="30dp"
         >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="CRUD MySQL"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="30dp"
+            android:gravity="center"
+            android:layout_marginBottom="100dp"
+            android:fontFamily="@font/comicbd"
+            />
+
         <Button
             android:id="@+id/save"
             android:layout_width="match_parent"
-            android:textAllCaps="false"
-            android:text="SAVE"
-            android:layout_margin="10dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
             android:backgroundTint="#4CAF50"
-            android:layout_height="wrap_content"/>
+            android:fontFamily="@font/comicbd"
+            android:text="SAVE"
+            android:textAllCaps="false"
+            android:textColor="@color/white" />
+
         <Button
             android:id="@+id/show"
             android:layout_width="match_parent"
-            android:textAllCaps="false"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#349DF1"
+            android:fontFamily="@font/comicbd"
             android:text="SHOW"
-            android:layout_margin="10dp"
-            android:backgroundTint="#2196F3"
-            android:layout_height="wrap_content"/>
+            android:layout_marginTop="30dp"
+            android:textAllCaps="false"
+            android:textColor="@color/white" />
     </LinearLayout>
 
 
