--- a/app/src/main/res/layout/activity_show_data.xml
+++ b/app/src/main/res/layout/activity_show_data.xml
@@ -11,15 +11,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:layout_weight="4"
+        android:layout_weight="3"
         android:gravity="center"
-        android:background="#9C27B0"
+        android:background="#CCE1F3"
         android:layout_height="match_parent">
         <Button
             android:id="@+id/btnshow"
-            android:backgroundTint="@color/teal_200"
-            android:text="ສະແດງ"
-            android:textSize="20dp"
+            android:background="#CCE1F3"
+            android:text="Show"
             android:padding="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -37,11 +36,13 @@
             android:text="Please Waiting...."
             android:padding="20dp"
             android:id="@+id/txtview"
-            android:background="#DC6565"
+            android:background="#B3D6F4"
+            android:fontFamily="@font/comicbd"
             android:layout_height="wrap_content"/>
 
         <ListView
             android:id="@+id/lv"
+            android:background="#E1EFFB"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
